<resources>
    <string name="menu_species">Species</string>
    <string name="menu_threads">Threads</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Contact Us</string>
    <string name="menu_profile">Edit Profile</string>
    <string name="menu_clear">Clear Images</string>
	<string name="menu_rate">Rate App</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_title">Type a title…</string>
    <string name="hint_comment">Type a comment…</string>
    <string name="hint_name">Type a name…</string>
    <string name="hint_resource">Type a website link…</string>
    <string name="hint_address">Type an address…</string>
    <string name="hint_search">Type to search…</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="submit">Submit</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="verify">Verify Address</string>
    <string name="redo">Re-Select</string>
    <string name="scan">Scan</string>
	<string name="create">Create</string>
	<string name="ban">Ban</string>
    <string name="action_register">Register</string>
    <string name="action_offline_login">Offline Login</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_login">Login</string>
    <string name="action_collect">Collect</string>
    <string name="action_add">Add</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_recognition">Image Recognition</string>
    <string name="action_all">All Posts</string>
    <string name="action_mine">My Posts</string>
    <string name="action_upload_image">Upload Image</string>
    <string name="action_accept">Send</string>
    <string name="action_refresh">Refresh</string>
    <string name="group_specie">Species</string>
    <string name="group_image">Image</string>
    <string name="group_location">Location</string>
    <string name="group_structure">Structure</string>
    <string name="group_change">Change</string>
    <string name="action_species">View Species</string>
    <string name="action_more_images">View All Images</string>
    <string name="action_upload">Upload Image</string>
    <string name="action_locations">Manage Locations</string>
    <string name="action_map">View Map</string>
    <string name="action_add_child">Add Sub-Category</string>
    <string name="action_move">Move</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Create Edit Request</string>
    <string name="action_change_requests">Manage Change Requests</string>
    <string name="action_history">View History</string>
    <string name="action_version">View Version</string>
    <string name="used">Used</string>
    <string name="main">Main</string>
    <string name="species_count">matched species</string>
    <string name="auto_login">Automatically Login</string>
    <string name="km_away">Showing species within _km away.</string>
    <string name="approved">Approved</string>
    <string name="select_or_take">Select Picture</string>
    <string name="share">Share</string>
    <string name="image_cd">image</string>
    <string name="openmenu">Advanced Menu</string>
    <string name="title_activity_my_threads">My Threads</string>
    <string name="title_activity_my_search">Search Results</string>
    <string name="websites">Websites:</string>
    <string name="about">ARIN Beta&lt;br/&gt;(Aquatic Recognition Index Network)&lt;br/&gt;v___&lt;br/&gt;&lt;br/&gt;Developers:&lt;br/&gt;&lt;a href="http://lnkd.in/dfC3pqQ"&gt;Ryan Steve D\'Souza&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Client Communications:&lt;br/&gt;&lt;a href="http://lnkd.in/2ZTQe9"&gt;Jamie Tung&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Credits:&lt;br/&gt;Help &amp; Design: &lt;a href="http://www.utsc.utoronto.ca/~lovejoy/nLovejoy.html"&gt;Dr. Nathan Lovejoy &amp; Team&lt;/a&gt;&lt;br/&gt;Icon: &lt;a href="http://lnkd.in/tVbZ6W"&gt;Caradec Bisesar&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Plugins:&lt;br/&gt;&lt;a href="https://github.com/MikeOrtiz/TouchImageView"&gt;TouchImageView&lt;/a&gt;: Mike Ortiz&lt;br/&gt;&lt;a href="https://developer.android.com/google/play-services/index.html"&gt;Google Play Services&lt;/a&gt;: Google&lt;br/&gt;&lt;br/&gt;Algorithms:&lt;br/&gt;&lt;a href="http://www.compuphase.com/cmetric.htm"&gt;Color Compare&lt;/a&gt;&lt;br/&gt;&lt;br/&gt;Code Snippets:&lt;br/&gt;&lt;a href="http://stackoverflow.com/questions/937313/android-basic-gesture-detection"&gt;Swipe Detection&lt;/a&gt;: Code Shogun&lt;br/&gt;&lt;a href="http://www.androidhive.info/2013/07/android-expandable-list-view-tutorial"&gt;Expandable List View&lt;/a&gt;: Ravi Tamada&lt;br/&gt;&lt;a href="http://android-er.blogspot.ca/2010/01/convert-exif-gps-info-to-degree-format.html"&gt;geoDegree&lt;/a&gt;: Andr.oid Eric&lt;br/&gt;&lt;a href="http://www.androidsnippets.com/prompt-engaged-users-to-rate-your-app-in-the-android-market-appirater"&gt;Auto Rater&lt;/a&gt;: sissi</string>
    <string name="default_page_num">1</string>
    <string name="copyright">© Copyright 2014 ARIN Beta</string>
    <string name="catstats">Version: %%d\nChanges: %%d\nUnapproved Changes: %%d\nImages: %%d\nUnapproved Images: %%d\nContained Species: %%d</string>
    <string name="spestats">Version: %%d\nChanges: %%d\nUnapproved Changes: %%d\nImages: %%d\nUnapproved Images: %%d\nLocations: %%d\nUnapproved Locations: %%d</string>
    <string name="profile_saved">Profile Saved</string>
    <string name="registered">Registered</string>
    <string name="pass_emailed">Password Emailed</string>
    <string name="used_location">Current Location Used</string>
    <string name="not_used_location">Could Not Get Current Location</string>
    <string name="my_email">rydsouza82@gmail.com</string>
    <string name="dev_link">http://192.168.1.102:81/Arin/Server/site</string>
    <string name="dev_host">http://192.168.1.102:81/Arin/Server/scripts/config/sqlhandler.php</string>
    <string name="web_link">http://arin.esy.es/arin/site</string>
    <string name="web_host">http://arin.esy.es/arin/scripts/config/sqlhandler.php</string>
    <string name="arin_link">@string/dev_link</string>
    <string name="arin_host">@string/dev_host</string>
    <string name="dev_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="web_unit_id">ca-app-pub-9879286629528309/2972003479</string>
    <string name="banner_ad_unit_id">@string/dev_unit_id</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="error_title">Error</string>
    <string name="warning_title">Warning</string>
    <string name="history">History of Edits</string>
    <string name="requsts">Requests for Edits</string>
    <string name="confirmdelete">Confirm Delete</string>
    <string name="downloadnotice">Download Notice</string>
    <string name="uploadnotice">Upload Notice</string>
    <string name="fishversion">Fish Version</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_image">Delete Image?</string>
    <string name="new_thread">New Thread</string>
    <string name="ban_reason">Reason For Ban</string>
    <string name="add_comment">Add a Comment</string>
    <string name="comment">Comment</string>
    <string name="new_parent">Select New Parent</string>
    <string name="notice">Notice</string>
    <string name="this_you">This is You</string>
    <string name="ban_days">Ban Days</string>
    <string name="ban_user">Ban User?</string>
    <string name="banned">Banned</string>
    <string name="select_location">Select a Location</string>
    <string name="stats">Information</string>
    <string name="image_preview">Extraction Preview</string>
    <string name="clear_title">Cleared</string>
    <string name="deletefull">Are you sure you want to delete this? This will delete all its contents too.</string>
    <string name="deleteAll">Are you sure you want to delete this?</string>
    <string name="abouttodownload">About to download _ images. Continue?</string>
    <string name="abouttoupload">About to upload _ images. Continue?</string>
    <string name="yes_to_delete">Click \'Yes\' to confirm deletion.</string>
    <string name="approve_the_request">Approve this request?</string>
    <string name="you_sure">Are you sure?</string>
    <string name="currently_banned">This user is currently banned for _ days.</string>
    <string name="are_banned">You are currently banned for _ days. Editing features are currently disabled.</string>
    <string name="type_your_email">Enter your email address and we will email you your password.</string>
    <string name="wait_for_approved">Your change has been archived and will take effect when a biologist approves it.</string>
    <string name="no_images_to_show">No images available.</string>
    <string name="to_ban">Click an item to ban its author.</string>
    <string name="to_approve">Click a request item to approve it.</string>
    <string name="new_name">New Name:&#160;</string>
    <string name="new_resource">New Resource Link:</string>
    <string name="email">Email Author</string>
    <string name="help_email">Email Us</string>
    <string name="clear_message">All images have been cleared.</string>
    <string name="offline_save_image">Image will be uploaded next time you login online.</string>
    <string name="scan_complete">Scan Complete</string>
    <string name="time_msg">Duration:&#160;</string>
    <string name="loggining">Logging in…</string>
    <string name="uploading">Uploading…</string>
    <string name="downloading">Downloading…</string>
    <string name="saving">Saving…</string>
    <string name="deleting">Deleting…</string>
    <string name="adding">Adding…</string>
    <string name="moving">Moving…</string>
    <string name="approving">Approving…</string>
    <string name="banning">Banning…</string>
    <string name="registering">Registering…</string>
    <string name="emailing">Emailing…</string>
    <string name="downloadedImage">Downloading images for</string>
    <string name="uploadedImage">Uploading images…</string>
    <string name="analyzing">Analyzing…</string>
    <string name="loading">Loading…</string>
    <string name="searching">Searching…</string>
    <string name="extracting">Extracting…</string>
    <string name="gettinglocation">Getting Location…</string>
    <string name="unexpected_error">An unexpected error occurred.</string>
    <string name="no_internet">Please connect to the internet first.</string>
    <string name="server_error">A server error occurred. Try again later.</string>
    <string name="offline_mode">Offline mode will be used so editing features will be disabled.</string>
    <string name="no_internet_offline_mode">Could not connect to the internet. Offline mode will be used so editing features will be disabled.</string>
    <string name="server_error_offline_mode">Server is offline or an error occurred. Offline mode will be used so editing features will be disabled.</string>
    <string name="unexpected_error_offline_mode">An unexpected error occurred. Offline mode will be used so editing features will be disabled.</string>
    <string name="using_saved">Saved database will be used.</string>
    <string name="no_internet_using_saved">Could not connect to the internet. Saved database will be used.</string>
    <string name="server_error_using_saved">Server is offline or an error occurred. Saved database will be used.</string>
</resources>