<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/RegularView"
    tools:context="activity.LoginScreen" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
        
	    <ImageView
	        android:id="@+id/arinlogo"
	        android:contentDescription="@string/image_cd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/arinlogo" />
	    
	    <EditText
	        android:id="@+id/email"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="10sp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_email"
	        android:singleLine="true"
	        android:maxLength="255"
	        android:ems="10"
	        android:gravity="center"
	        android:inputType="textEmailAddress" />
	    
	    <EditText
	        android:id="@+id/password"
	        android:layout_margin="10sp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_password"
	        android:singleLine="true"
	        android:maxLength="255"
	        android:ems="10"
	        android:gravity="center"
	        android:inputType="textPassword" />
	    
	  	<CheckBox
	        android:id="@+id/checkBox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/auto_login" />
	  
	    <Button
	        android:id="@+id/loginButton"
	        style="@style/CircleButton"
	        android:onClick="loginButtonClick"
	        android:text="@string/action_login" />

	    <TextView
	        android:id="@+id/openmenu"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:clickable="true"
	        android:onClick="openMenu"
	        android:background="@drawable/text_button_selector"
	        android:layout_gravity="center"
	        android:padding="3dp"
	        android:text="@string/openmenu" />

    </LinearLayout>

</RelativeLayout>
