<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"  >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <EditText
	        android:id="@+id/name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_name"
	        android:singleLine="true"
	        android:maxLength="255"
	        android:ems="10" />
	        
	    <EditText
	        android:id="@+id/resource_link"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_resource"
	        android:singleLine="true"
	        android:maxLength="255"
	        android:inputType="textWebEmailAddress"
	        android:ems="10" />
	
	    <EditText
	        android:id="@+id/comment"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/hint_comment"
	        android:maxLength="255"
	        android:inputType="textMultiLine"
	        android:ems="10" >
	    </EditText>
	    
	</LinearLayout>

</ScrollView>
