<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/RegularView"
    tools:context="activity.MenuScreen"  >

	<ScrollView 
	       android:layout_width="match_parent"
	       android:layout_height="0dp"
	       android:layout_weight="1">
	    	
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/species"
	            style="@style/main_menu"
	            android:text="@string/menu_species"
	            android:onClick="goToNextScreen"/>
	        
			<View
			    android:id="@+id/whatsthatfishline"
			    style="@style/MenuLine"/>
	        
	        <TextView
	            android:id="@+id/whatsthatfish"
	            style="@style/main_menu"
	            android:text="@string/menu_threads"
	            android:onClick="goToThreads"/>
	        
			<View
			    style="@style/MenuLine"/>
	        
	        <TextView
	            android:id="@+id/settings"
	 			style="@style/main_menu"
	            android:text="@string/menu_settings"
	            android:onClick="goToSettings" />
			
	    </LinearLayout>
			
	</ScrollView> 

   <fragment
        android:id="@+id/adFragment"
        android:name="activity.MenuScreen$AdFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	
</LinearLayout>